kubectl/deploy2.yml
kind: Namespace 
apiVersion: v1
metadata:
  name: sonar-scm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-sonarqube-dev
  namespace: sonar-scm2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-sonarqube-dev
  template:
    metadata:
      labels:
        app: app-sonarqube-dev
    spec:
      containers:
        - name: container-sonarqube-dev
          image: scm.artifactory.mars.pcf-maximus.com/scm/scmdocker.sonarqube:sqube6.7.6
          ports:
            - name: http-port
              containerPort: 9000
          volumeMounts:
          - name: conf-dir
            mountPath: /mnt/sonarqube
      volumes:
        - name: conf-dir
          persistentVolumeClaim:
            claimName: pvc-sonarqube-dev
---
apiVersion: v1
kind: Service
metadata:
  name: service-sonarqube-dev
  namespace: sonar-scm
  labels:
    app: app-sonarqube-dev
spec:
  type: ClusterIP
  selector:
    app: app-sonarqube-dev
  ports:
  - port: 80
    targetPort: 9000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service-sonarqube-tcp-dev
  namespace: sonar-scm
  labels:
    app: app-sonarqube-dev
spec:
  type: NodePort
  selector:
    app: app-sonarqube-dev
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30910
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sonarqube-dev
  namespace: sonar-scm
  annotations:
    kubernetes.io/ingress.class: "traefik"
  labels:
    traefik.env: scm-traefik
spec:
  rules:
  - host: sonarqube.se.maximus.com
    http:
      paths:
      - backend:
          serviceName: service-sonarqube-dev
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-sonarqube-postgresql-dev
  namespace: sonar-scm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-sonarqube-postgresql-dev
  template:
    metadata:
      labels:
        app: app-sonarqube-postgresql-dev
    spec:
      containers:
        - name: container-sonarqube-postgresql-dev
          image: postgres:11.8
          ports:
            - name: db-port
              containerPort: 5432
          volumeMounts:
          - name: postgresql-dir
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-dir
          persistentVolumeClaim:
            claimName: pvc-sonarqube-postgresql-dev
---
apiVersion: v1
kind: Service
metadata:
  name: service-sonarqube-postgresql-dev
  namespace: sonar-scm
  labels:
    app: app-sonarqube-postgresql-dev
spec:
  type: ClusterIP
  selector:
    app: app-sonarqube-postgresql-dev
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
---
